# VideoClassifier

./: README.md  blue_print.txt  database.py  main.py  main_window.py  pyproject.toml  team_code.py  video_classifier.py  video_manager.py
VideoClassifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
videoclassifier/: main_window.py  video_manager.py
