[project]
name = "VideoClassifier"
version = "0.1.0"
description = "A smart video file manager with AI-like features."
dependencies = [
    "pyqt5",
    "opencv-python-headless",
]

[tool.setuptools.packages.find]
where = ["."] # Search for packages in the current directory (which is where `videoclassifier` now resides)

